# BayunDB

./: .cursorignore  .gitattributes  .gitignore  Cargo.toml  README.md
.cursor/rules/: cli-rule.mdc  code-complete-rule.mdc  definition-of-done-rule.mdc  docs-guid-rule.mdc  implementation-plan-rule.mdc  limit-sizes-rule.mdc  load-project-rule.mdc  project-structure-rule.mdc  roadmap-rule.mdc  tests-guide-rule.mdc
benches/: btree_bench.rs  buffer_pool_bench.rs  query_execution_bench.rs  query_parser_bench.rs  recovery_bench.rs  sqlite_comparison_bench.rs  table_operations_bench.rs  transaction_bench.rs
benches/sqlite_comparison/: README.md  basic_operations.rs  embedded_api.rs  mod.rs  sqlite_comparison_bench.rs
benches/sqlite_comparison/reports/: basic_operations.json  basic_operations.md  basic_operations_summary.md
docs/: DOCUMENTATION_STRUCTURE.md  README.md  query_implementation.md  restructuring_plan.md  roadmap.md  wal-implementation-plan.md
docs/benchmarks/btreeindex/100/report/: index.html
docs/benchmarks/btreeindex/1000/report/: index.html
docs/benchmarks/btreeindex/500/report/: index.html
docs/benchmarks/btreeindex/insert/report/: index.html
docs/benchmarks/btreeindex/lookup/report/: index.html
docs/benchmarks/btreeindex/range_scan/report/: index.html
docs/benchmarks/btreeindex/report/: index.html
docs/benchmarks/bufferpool/report/: index.html
docs/benchmarks/checkpoint/report/: index.html
docs/benchmarks/queryexecution/report/: index.html
docs/benchmarks/queryparser/report/: index.html
docs/benchmarks/recovery_time/report/: index.html
docs/benchmarks/recovery_with_checkpoints/report/: index.html
docs/benchmarks/report/: index.html
docs/benchmarks/tableoperations/report/: index.html
docs/benchmarks/transaction/report/: index.html
docs/benchmarks/wal_append/report/: index.html
docs/components/: schema_management.md  schema_validation.md
docs/components/index/: btree.md
docs/components/query/: cli.md  executor.md  implementation.md  parser.md
docs/components/transaction/: wal.md
docs/development/: documentation_guide.md  testing.md
docs/getting-started/: project_architecture.md
docs/project/: benchmarking_plan.md  documentation_guide.md  roadmap.md  sqlite_feature_parity.md
docs/project/implementation-plans/: aggregation-operators.md
docs/tutorials/: using_aggregations.md  using_cli.md
examples/: debug_alter_insert_bug.rs  debug_validation.rs  execution_engine_debug.rs  recovery_debug.rs  transaction_demo.rs  wal_demo.rs
scripts/: generate_benchmark_charts.py  requirements.txt  run_cli.bat  run_cli.sh  run_sqlite_comparison.ps1  run_sqlite_comparison.sh
src/: lib.rs  main.rs
src/catalog/: alter_table.rs  catalog.rs  column.rs  compatibility.rs  convert.rs  expression.rs  mod.rs  schema.rs  schema_management.rs  table.rs  table_column_ops.rs  validation.rs  validation_error.rs  validation_tests.rs  value.rs
src/common/: mod.rs  types.rs
src/index/: mod.rs
src/index/btree/: error.rs  index.rs  mod.rs  node.rs  serialization.rs
src/index/btree/index/: base.rs  deletion.rs  mod.rs  operations.rs  range_scan.rs
src/index/btree/node/: base.rs  mod.rs  operations.rs  tests.rs
src/index/btree/serialization/: decoding.rs  encoding.rs  mod.rs  order.rs  tests.rs
src/query/: mod.rs
src/query/executor/: ddl_executor.rs  dml_executor.rs  engine.rs  expression_eval.rs  mod.rs  result.rs  type_conversion.rs
src/query/executor/operators/: dummy.rs  filter.rs  mod.rs  project.rs  scan.rs  sort.rs
src/query/parser/: ast.rs  lexer.rs  mod.rs  parser.rs
src/query/parser/components/: mod.rs  parser_core.rs  parser_ddl.rs  parser_dml.rs  parser_expressions.rs  parser_select.rs
src/query/planner/: cost_model.rs  filter_pushdown.rs  join_reordering.rs  logical.rs  materialization.rs  mod.rs  operator_builder.rs  optimizer.rs  physical.rs  physical_optimizer.rs  physical_plan.rs
src/storage/: mod.rs
src/storage/buffer/: error.rs  manager.rs  mod.rs
src/storage/buffer/manager/: basic_operations.rs  frame_management.rs  mod.rs  transactions.rs
src/storage/buffer/replacer/: lru.rs  mod.rs
src/storage/disk/: disk_manager.rs  mod.rs
src/storage/page/: error.rs  header.rs  layout.rs  manager.rs  mod.rs
src/transaction/: concurrency.rs  mod.rs  recovery.rs
src/transaction/concurrency/: mod.rs  transaction.rs  transaction_manager.rs
src/transaction/wal/: checkpoint.rs  log_buffer.rs  log_manager.rs  log_record.rs  mod.rs  recovery.rs
src/transaction/wal/log_components/: log_file_error.rs  log_file_header.rs  log_file_manager.rs  log_file_utils.rs  log_iterator.rs  log_manager_core.rs  log_recovery.rs  mod.rs
tests/: btree_index_test.rs  buffer_pool_test.rs  database_test.rs  page_manager_test.rs
tests/common/: mod.rs
tests/integration/: aggregation_test.rs  cli_test.rs  database_test.rs  execution_test.rs  join_test.rs  mod.rs  parser_test.rs  planner_test.rs  query_processing_test.rs  recovery_test.rs  schema_management_test.rs  schema_test.rs  sql_alter_table_tests.rs  validation_test.rs  wal_test.rs
(+436 files in other folders)
