[package]
name = "bayundb"
version = "0.1.0"
edition = "2024"

[lib]
name = "bayundb"
path = "src/lib.rs"

[[bin]]
name = "bayundb"
path = "src/main.rs"

[[bin]]
name = "bnql"
path = "src/bin/cli.rs"

[[bench]]
name = "buffer_pool_bench"
harness = false

[[bench]]
name = "btree_bench"
harness = false

[[bench]]
name = "query_parser_bench"
harness = false

[[bench]]
name = "transaction_bench"
harness = false

[[bench]]
name = "query_execution_bench"
harness = false

[[bench]]
name = "table_operations_bench"
harness = false

[[bench]]
name = "recovery_bench"
harness = false

[[bench]]
name = "sqlite_comparison_bench"
path = "benches/sqlite_comparison_bench.rs"
harness = false

[[test]]
name = "parser_test"
path = "tests/integration/parser_test.rs"

[[test]]
name = "planner_test"
path = "tests/integration/planner_test.rs"

[[test]]
name = "join_test"
path = "tests/integration/join_test.rs"

[[test]]
name = "execution_test"
path = "tests/integration/execution_test.rs"

[[test]]
name = "recovery_test"
path = "tests/integration/recovery_test.rs"

[[test]]
name = "cli_test"
path = "tests/integration/cli_test.rs"

[[test]]
name = "aggregation_test"
path = "tests/integration/aggregation_test.rs"

[[test]]
name = "schema_test"
path = "tests/integration/schema_test.rs"

[[test]]
name = "validation_test"
path = "tests/integration/validation_test.rs"

[[test]]
name = "schema_management_test"
path = "tests/integration/schema_management_test.rs"

[[test]]
name = "sql_alter_table_tests"
path = "tests/integration/sql_alter_table_tests.rs"

[[example]]
name = "debug_validation"
path = "examples/debug_validation.rs"

[[example]]
name = "execution_engine_debug"
path = "examples/execution_engine_debug.rs"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
crossbeam = "0.8"
parking_lot = "0.12"
byteorder = "1.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log = "0.4"
clap = { version = "4.3", features = ["derive"] }
rustyline = "11.0"
once_cell = "1.18"
hex = "0.4"
linked-hash-map = { version = "0.5", features = ["serde"] }

[dev-dependencies]
tempfile = "3.2"
criterion = "0.5"
rand = "0.8"
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = "0.4"
serde_json = "1.0"
rustc_version_runtime = "0.2.1" 
